[package]
name = "gleam"
version = "0.13.1"
license = "Apache-2.0/MIT"
authors = ["The Servo Project Developers"]
build = "build.rs"
documentation = "https://doc.servo.org/gleam/"
repository = "https://github.com/servo/gleam"
description = "Generated OpenGL bindings and wrapper for Servo."

[build-dependencies]
gl_generator = { version = "0.14.1", path = "../gl-rs/gl_generator", default-features = false }

[features]
default = ["std"]
std = []