[package]
name = "gleam"
version = "0.14.0"
license = "Apache-2.0/MIT"
authors = ["The Servo Project Developers"]
build = "build.rs"
documentation = "https://doc.servo.org/gleam/"
repository = "https://github.com/servo/gleam"
description = "Generated OpenGL bindings and wrapper for Servo."

[build-dependencies]
gl_generator = { version = "0.15", git = "https://github.com/fschutt/gl-rs", branch = "no_std", default-features = false }

[features]
default = ["std"]
std = []